--- a/styles/global.css
+++ b/styles/global.css
@@ -19,6 +19,7 @@ html{
     --grey-dark: #4D5E77;
     --grey-blue: #A1B2CD;
     --grey-light: #E5EAF1;
+    --grey-medium: #eaecf2;
 
     /* 1rem = 16px (User Agent) = 100% */
     font-size: 62.5%;
@@ -81,11 +82,25 @@ button:hover, .button:hover{
     filter: brightness(1.2);
 }
 
-button > img
+button > img,
 .button > img{
     margin-right: 1rem;
     width: 2rem;
 }
+
+button.red,
+.button.red{
+    background: var(--red);
+    color: var(--white);
+}
+
+button.grey,
+.button.grey{
+    background: var(--grey-light);
+    color: var(--grey-dark);
+}
+
+/* HEADER */
 
 button.outlined,
 .button.outlined{
